crates/idl-ts/tests/snapshots/snapshot_codegen__snapshot_amqp_helpers_struct.snap
---
source: crates/idl-ts/tests/snapshot_codegen.rs
expression: "gen_with_amqp(\"struct Sensor { long id; double temp; };\")"
---
// Generated by zerodds idl-ts. Do not edit.

import type {
    Char, WChar, LongDouble,
    DdsAny, DdsException,
    DdsTypeDescriptor, DdsMemberDescriptor, DdsTypeRef,
    ServiceDescriptor, OperationDescriptor,
    OperationParameterDescriptor, AttributeDescriptor, ParameterMode,
} from "@zerodds/types";
import {
    registerType, makeChar, makeWChar, makeLongDouble,
} from "@zerodds/types";
import type {
    DdsTopicType, EndianMode,
} from "@zerodds/cdr";
import {
    Xcdr2Writer, Xcdr2Reader, md5,
} from "@zerodds/cdr";

export interface Sensor {
    id: number;
    temp: number;
}

export function isSensor(v: unknown): v is Sensor {
    if (typeof v !== "object" || v === null) return false;
    const o = v as Record<string, unknown>;
    if (typeof o.id !== "number") return false;
    if (typeof o.temp !== "number") return false;
    return true;
}

export const SensorType: DdsTypeDescriptor<Sensor> = {
    kind: "struct",
    name: "Sensor",
    extensibility: "appendable",
    nested: false,
    fields: [
        {
            name: "id",
            id: 0,
            type: { kind: "primitive", name: "int32" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
        {
            name: "temp",
            id: 1,
            type: { kind: "primitive", name: "double" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
    ],
    typeGuard: isSensor,
};
registerType(SensorType);

export const SensorTypeSupport: DdsTopicType<Sensor> = {
    typeName: "Sensor",
    isKeyed: false,
    extensibility: "appendable",
    encodeInto(w: Xcdr2Writer, s: Sensor): void {
        const _tok = w.beginAppendable();
        w.writeInt32(s.id);
        w.writeFloat64(s.temp);
        w.endAppendable(_tok);
    },
    encode(s: Sensor, endian: EndianMode = "le"): Uint8Array {
        const w = new Xcdr2Writer(endian);
        this.encodeInto(w, s);
        return w.toBytes();
    },
    decodeFrom(r: Xcdr2Reader): Sensor {
        const _tok = r.beginAppendable();
        const _f_id: number = r.readInt32();
        const _f_temp: number = r.readFloat64();
        r.endAppendable(_tok);
        return {
            id: _f_id,
            temp: _f_temp,
        };
    },
    decode(bytes: Uint8Array, offset = 0, length: number = bytes.length - offset): Sensor {
        const r = new Xcdr2Reader(bytes, offset, length, "le");
        return this.decodeFrom(r);
    },
    keyHash(s: Sensor): Uint8Array {
        return new Uint8Array(16);
    },
};


// Spec §7.2.3 / §8.1.2 / §8.1.3 — AMQP-Bindings.
import * as ddsAmqp from "@zerodds/amqp/codec";

// Sensor — Spec §8.1.3 composite + §8.1.2 JSON.
export function toAmqpValue_Sensor(v_: Sensor): ddsAmqp.Value {
    const b_ = new ddsAmqp.StructBuilder("Sensor");
    b_.fieldInt32("id", v_.id);
    b_.fieldDouble("temp", v_.temp);
    return b_.build();
}

export function toJsonString_Sensor(v_: Sensor): string {
    return ddsAmqp.toJson(toAmqpValue_Sensor(v_));
}
