crates/idl-ts/tests/snapshots/snapshot_codegen__snapshot_amqp_helpers_union.snap
---
source: crates/idl-ts/tests/snapshot_codegen.rs
expression: "gen_with_amqp(\"union U switch (long) { case 1: long a; case 2: double b; };\")"
---
// Generated by zerodds idl-ts. Do not edit.

import type {
    DdsTypeDescriptor,
} from "@zerodds/types";
import {
    registerType,
} from "@zerodds/types";
import type {
    DdsTopicType, EndianMode,
} from "@zerodds/cdr";
import {
    Xcdr2Writer, Xcdr2Reader,
} from "@zerodds/cdr";

export type U =
    { discriminator: 1; a: number }
    | { discriminator: 2; b: number }
;

export const UType: DdsTypeDescriptor<U> = {
    kind: "union",
    name: "U",
    extensibility: "appendable",
    nested: false,
    fields: [
        {
            name: "discriminator",
            id: 0xFFFFFFFF,
            type: { kind: "primitive", name: "int32" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
        {
            name: "a",
            id: 0,
            type: { kind: "primitive", name: "int32" },
            key: false,
            optional: false,
            mustUnderstand: false,
            labels: [1],
        },
        {
            name: "b",
            id: 1,
            type: { kind: "primitive", name: "double" },
            key: false,
            optional: false,
            mustUnderstand: false,
            labels: [2],
        },
    ],
    hasDefault: false,
    typeGuard: isU,
};
export function isU(v: unknown): v is U {
    if (typeof v !== "object" || v === null) return false;
    const o = v as Record<string, unknown>;
    return "discriminator" in o;
}

registerType(UType);

export const UTypeSupport: DdsTopicType<U> = {
    typeName: "U",
    isKeyed: false,
    extensibility: "appendable",
    encodeInto(w: Xcdr2Writer, s: U): void {
        const _tok = w.beginAppendable();
        w.writeInt32(s.discriminator);
        if (s.discriminator === 1) {
            const _v: number = (s as unknown as { a: number }).a;
            w.writeInt32(_v);
        } else if (s.discriminator === 2) {
            const _v: number = (s as unknown as { b: number }).b;
            w.writeFloat64(_v);
        }
        w.endAppendable(_tok);
    },
    encode(s: U, endian: EndianMode = "le", representation = 1): Uint8Array {
        const w = new Xcdr2Writer(endian, representation === 0 ? 8 : 4);
        this.encodeInto(w, s);
        return w.toBytes();
    },
    decodeFrom(r: Xcdr2Reader): U {
        const _tok = r.beginAppendable();
        const _disc: number = r.readInt32();
        let _result: U;
        if (_disc === 1) {
            const _b: number = r.readInt32();
            _result = { discriminator: _disc, a: _b } as unknown as typeof _result;
        } else if (_disc === 2) {
            const _b: number = r.readFloat64();
            _result = { discriminator: _disc, b: _b } as unknown as typeof _result;
        } else {
            _result = { discriminator: _disc } as unknown as U;
        }
        r.endAppendable(_tok);
        return _result;
    },
    decode(bytes: Uint8Array, offset = 0, length: number = bytes.length - offset, endian: EndianMode = "le", representation = 1): U {
        const r = new Xcdr2Reader(bytes, offset, length, endian, representation === 0 ? 8 : 4);
        return this.decodeFrom(r);
    },
    keyHash(s: U): Uint8Array {
        void s;
        return new Uint8Array(16);
    },
};


// Spec §7.2.3 / §8.1.2 / §8.1.3 — AMQP-Bindings.
import * as ddsAmqp from "@zerodds/amqp/codec";

// U — Spec §7.2.3 union (list of [disc, branch?]).
export function toAmqpValue_U(u_: U): ddsAmqp.Value {
    if (u_.discriminator === 1) {
        return ddsAmqp.makeUnionBody(ddsAmqp.int32Value(1), ddsAmqp.int32Value(u_.a));
    }
    if (u_.discriminator === 2) {
        return ddsAmqp.makeUnionBody(ddsAmqp.int32Value(2), ddsAmqp.doubleValue(u_.b));
    }
    throw new Error("toAmqpValue: union value did not match any explicit case");
}

export function toJsonString_U(u_: U): string {
    return ddsAmqp.toJson(toAmqpValue_U(u_));
}
