crates/idl-ts/tests/snapshots/snapshot_codegen__snapshot_enum.snap
---
source: crates/idl-ts/tests/snapshot_codegen.rs
expression: "gen_default(\"enum Color { RED, GREEN, BLUE };\")"
---
// Generated by zerodds idl-ts. Do not edit.

import type {
    Char, WChar, LongDouble,
    DdsAny, DdsException,
    DdsTypeDescriptor, DdsMemberDescriptor, DdsTypeRef,
    ServiceDescriptor, OperationDescriptor,
    OperationParameterDescriptor, AttributeDescriptor, ParameterMode,
} from "@zerodds/types";
import {
    registerType, makeChar, makeWChar, makeLongDouble,
} from "@zerodds/types";
import type {
    DdsTopicType, EndianMode,
} from "@zerodds/cdr";
import {
    Xcdr2Writer, Xcdr2Reader, md5,
} from "@zerodds/cdr";

export const Color = {
    RED: "RED",
    GREEN: "GREEN",
    BLUE: "BLUE",
} as const;
export type Color = (typeof Color)[keyof typeof Color];
export const ColorOrdinal: Readonly<Record<Color, number>> = {
    RED: 0,
    GREEN: 1,
    BLUE: 2,
} as const;
export const ColorFromOrdinal: ReadonlyMap<number, Color> = new Map([
    [0, "RED"],
    [1, "GREEN"],
    [2, "BLUE"],
]);

export function isColor(v: unknown): v is Color {
    if (typeof v !== "string") return false;
    return Object.prototype.hasOwnProperty.call(Color, v);
}

export const ColorType: DdsTypeDescriptor<Color> = {
    kind: "enum",
    name: "Color",
    extensibility: "appendable",
    nested: false,
    bitBound: 32,
    fields: [
        {
            name: "RED",
            id: 0,
            type: { kind: "primitive", name: "int32" },
            key: false,
            optional: false,
            mustUnderstand: false,
            default: 0,
        },
        {
            name: "GREEN",
            id: 1,
            type: { kind: "primitive", name: "int32" },
            key: false,
            optional: false,
            mustUnderstand: false,
            default: 1,
        },
        {
            name: "BLUE",
            id: 2,
            type: { kind: "primitive", name: "int32" },
            key: false,
            optional: false,
            mustUnderstand: false,
            default: 2,
        },
    ],
    typeGuard: isColor,
};
registerType(ColorType);
