crates/idl-ts/tests/snapshots/snapshot_codegen__snapshot_module_nesting.snap
---
source: crates/idl-ts/tests/snapshot_codegen.rs
expression: "gen_default(\"module Outer { module Inner { struct S { long x; }; }; };\")"
---
// Generated by zerodds idl-ts. Do not edit.

import type {
    Char, WChar, LongDouble,
    DdsAny, DdsException,
    DdsTypeDescriptor, DdsMemberDescriptor, DdsTypeRef,
    ServiceDescriptor, OperationDescriptor,
    OperationParameterDescriptor, AttributeDescriptor, ParameterMode,
} from "@zerodds/types";
import {
    registerType, makeChar, makeWChar, makeLongDouble,
} from "@zerodds/types";
import type {
    DdsTopicType, EndianMode,
} from "@zerodds/cdr";
import {
    Xcdr2Writer, Xcdr2Reader, md5,
} from "@zerodds/cdr";

export namespace Outer {
export namespace Inner {
export interface S {
    x: number;
}

export function isS(v: unknown): v is S {
    if (typeof v !== "object" || v === null) return false;
    const o = v as Record<string, unknown>;
    if (typeof o.x !== "number") return false;
    return true;
}

export const SType: DdsTypeDescriptor<S> = {
    kind: "struct",
    name: "S",
    extensibility: "appendable",
    nested: false,
    fields: [
        {
            name: "x",
            id: 0,
            type: { kind: "primitive", name: "int32" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
    ],
    typeGuard: isS,
};
registerType(SType);

export const STypeSupport: DdsTopicType<S> = {
    typeName: "Outer::Inner::S",
    isKeyed: false,
    extensibility: "appendable",
    encodeInto(w: Xcdr2Writer, s: S): void {
        const _tok = w.beginAppendable();
        w.writeInt32(s.x);
        w.endAppendable(_tok);
    },
    encode(s: S, endian: EndianMode = "le", representation = 1): Uint8Array {
        const w = new Xcdr2Writer(endian, representation === 0 ? 8 : 4);
        this.encodeInto(w, s);
        return w.toBytes();
    },
    decodeFrom(r: Xcdr2Reader): S {
        const _tok = r.beginAppendable();
        const _f_x: number = r.readInt32();
        r.endAppendable(_tok);
        return {
            x: _f_x,
        };
    },
    decode(bytes: Uint8Array, offset = 0, length: number = bytes.length - offset, endian: EndianMode = "le", representation = 1): S {
        const r = new Xcdr2Reader(bytes, offset, length, endian, representation === 0 ? 8 : 4);
        return this.decodeFrom(r);
    },
    keyHash(s: S): Uint8Array {
        return new Uint8Array(16);
    },
};

}

}
