crates/idl-ts/tests/snapshots/snapshot_codegen__snapshot_simple_struct.snap
---
source: crates/idl-ts/tests/snapshot_codegen.rs
expression: "gen_default(\"struct Point { long x; long y; };\")"
---
// Generated by zerodds idl-ts. Do not edit.

import type {
    DdsTypeDescriptor,
} from "@zerodds/types";
import {
    registerType,
} from "@zerodds/types";
import type {
    DdsTopicType, EndianMode,
} from "@zerodds/cdr";
import {
    Xcdr2Writer, Xcdr2Reader,
} from "@zerodds/cdr";

export interface Point {
    x: number;
    y: number;
}

export function isPoint(v: unknown): v is Point {
    if (typeof v !== "object" || v === null) return false;
    const o = v as Record<string, unknown>;
    if (typeof o.x !== "number") return false;
    if (typeof o.y !== "number") return false;
    return true;
}

export const PointType: DdsTypeDescriptor<Point> = {
    kind: "struct",
    name: "Point",
    extensibility: "appendable",
    nested: false,
    fields: [
        {
            name: "x",
            id: 0,
            type: { kind: "primitive", name: "int32" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
        {
            name: "y",
            id: 1,
            type: { kind: "primitive", name: "int32" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
    ],
    typeGuard: isPoint,
};
registerType(PointType);

export const PointTypeSupport: DdsTopicType<Point> = {
    typeName: "Point",
    isKeyed: false,
    extensibility: "appendable",
    encodeInto(w: Xcdr2Writer, s: Point): void {
        const _tok = w.beginAppendable();
        w.writeInt32(s.x);
        w.writeInt32(s.y);
        w.endAppendable(_tok);
    },
    encode(s: Point, endian: EndianMode = "le", representation = 1): Uint8Array {
        const w = new Xcdr2Writer(endian, representation === 0 ? 8 : 4);
        this.encodeInto(w, s);
        return w.toBytes();
    },
    decodeFrom(r: Xcdr2Reader): Point {
        const _tok = r.beginAppendable();
        const _f_x: number = r.readInt32();
        const _f_y: number = r.readInt32();
        r.endAppendable(_tok);
        return {
            x: _f_x,
            y: _f_y,
        };
    },
    decode(bytes: Uint8Array, offset = 0, length: number = bytes.length - offset, endian: EndianMode = "le", representation = 1): Point {
        const r = new Xcdr2Reader(bytes, offset, length, endian, representation === 0 ? 8 : 4);
        return this.decodeFrom(r);
    },
    keyHash(s: Point): Uint8Array {
        return new Uint8Array(16);
    },
};
