crates/idl-ts/tests/snapshots/snapshot_codegen__snapshot_struct_with_string_and_sequence.snap
---
source: crates/idl-ts/tests/snapshot_codegen.rs
expression: "gen_default(\"struct Bag { string name; sequence<long> ids; };\")"
---
// Generated by zerodds idl-ts. Do not edit.

import type {
    Char, WChar, LongDouble,
    DdsAny, DdsException,
    DdsTypeDescriptor, DdsMemberDescriptor, DdsTypeRef,
    ServiceDescriptor, OperationDescriptor,
    OperationParameterDescriptor, AttributeDescriptor, ParameterMode,
} from "@zerodds/types";
import {
    registerType, makeChar, makeWChar, makeLongDouble,
} from "@zerodds/types";
import type {
    DdsTopicType, EndianMode,
} from "@zerodds/cdr";
import {
    Xcdr2Writer, Xcdr2Reader, md5,
} from "@zerodds/cdr";

export interface Bag {
    name: string;
    ids: Array<number>;
}

export function isBag(v: unknown): v is Bag {
    if (typeof v !== "object" || v === null) return false;
    const o = v as Record<string, unknown>;
    if (typeof o.name !== "string") return false;
    return true;
}

export const BagType: DdsTypeDescriptor<Bag> = {
    kind: "struct",
    name: "Bag",
    extensibility: "appendable",
    nested: false,
    fields: [
        {
            name: "name",
            id: 0,
            type: { kind: "string", wide: false },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
        {
            name: "ids",
            id: 1,
            type: { kind: "sequence", element: { kind: "primitive", name: "int32" } },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
    ],
    typeGuard: isBag,
};
registerType(BagType);

export const BagTypeSupport: DdsTopicType<Bag> = {
    typeName: "Bag",
    isKeyed: false,
    extensibility: "appendable",
    encode(s: Bag, endian: EndianMode = "le"): Uint8Array {
        const w = new Xcdr2Writer(endian);
        const _tok = w.beginAppendable();
        w.writeString(s.name);
        w.writeUint32(s.ids.length);
        for (const _e of s.ids) {
            w.writeInt32(_e);
        }
        w.endAppendable(_tok);
        return w.toBytes();
    },
    decode(bytes: Uint8Array, offset = 0, length: number = bytes.length - offset): Bag {
        const r = new Xcdr2Reader(bytes, offset, length, "le");
        const _tok = r.beginAppendable();
        const _f_name: string = r.readString();
        const _f_ids: Array<number> = ((): Array<number> => { const _n = r.readUint32(); const _o: Array<number> = []; for (let _i = 0; _i < _n; _i++) { _o.push(r.readInt32()); } return _o; })();
        r.endAppendable(_tok);
        return {
            name: _f_name,
            ids: _f_ids,
        };
    },
    keyHash(s: Bag): Uint8Array {
        return new Uint8Array(16);
    },
};
