crates/idl-ts/tests/snapshots/snapshot_codegen__snapshot_union.snap
---
source: crates/idl-ts/tests/snapshot_codegen.rs
expression: "gen_default(\"union U switch (long) { case 1: long a; case 2: double b; default: octet c; };\")"
---
// Generated by zerodds idl-ts. Do not edit.

import type {
    Char, WChar, LongDouble,
    DdsAny, DdsException,
    DdsTypeDescriptor, DdsMemberDescriptor, DdsTypeRef,
    ServiceDescriptor, OperationDescriptor,
    OperationParameterDescriptor, AttributeDescriptor, ParameterMode,
} from "@zerodds/types";
import {
    registerType, makeChar, makeWChar, makeLongDouble,
} from "@zerodds/types";
import type {
    DdsTopicType, EndianMode,
} from "@zerodds/cdr";
import {
    Xcdr2Writer, Xcdr2Reader, md5,
} from "@zerodds/cdr";

export type U =
    { discriminator: 1; a: number }
    | { discriminator: 2; b: number }
    | { discriminator: number; c: number }
;

export const UType: DdsTypeDescriptor<U> = {
    kind: "union",
    name: "U",
    extensibility: "appendable",
    nested: false,
    fields: [
        {
            name: "discriminator",
            id: 0xFFFFFFFF,
            type: { kind: "primitive", name: "int32" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
        {
            name: "a",
            id: 0,
            type: { kind: "primitive", name: "int32" },
            key: false,
            optional: false,
            mustUnderstand: false,
            labels: [1],
        },
        {
            name: "b",
            id: 1,
            type: { kind: "primitive", name: "double" },
            key: false,
            optional: false,
            mustUnderstand: false,
            labels: [2],
        },
        {
            name: "c",
            id: 2,
            type: { kind: "primitive", name: "octet" },
            key: false,
            optional: false,
            mustUnderstand: false,
        },
    ],
    hasDefault: true,
    typeGuard: isU,
};
export function isU(v: unknown): v is U {
    if (typeof v !== "object" || v === null) return false;
    const o = v as Record<string, unknown>;
    return "discriminator" in o;
}

registerType(UType);
